# fluff

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  fluf.sublime-workspace  fluff.sublime-project  fluff.sublime-workspace  hello.fluf  hello.fluff
.github/workflows/: build.yml  cmake-multi-platform.yml  macos.yml  ubuntu.yml  windows.yml
docs/: Doxyfile.in  mkdocs.sh
include/: base.h  error.h  fluff.h
include/core/: class.h  config.h  instance.h  ir.h  method.h  module.h  object.h  string.h  vm.h
include/parser/: analyser.h  ast.h  codegen.h  interpret.h  lexer.h  text.h
include/util/: container.h  limits.h  macros.h
src/: base.c  error.c  main.c
src/core/: class.c  config.c  instance.c  ir.c  method.c  module.c  object.c  string.c  vm.c
src/parser/: analyser.c  ast.c  interpret.c  lexer.c  text.c
